Added Zoom in and out. Increased hex number lots. seperated HTML and Script

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Hex Draw Demo</title>
-        <script src="//d3js.org/d3.v3.min.js"></script>
-        <script src="//d3js.org/topojson.v1.min.js"></script>
 
-        <link   rel="stylesheet" href="css/hexagon.css">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Hex Draw Demo</title>
+    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="//d3js.org/topojson.v1.min.js"></script>
+    <script src="js/hexdraw.js"></script>
+    <link rel="stylesheet" href="css/hexagon.css">
+</head>
 
-    <body>
-        <script src="js/hexdraw.js"></script>
-    </body>
+<body onload="fnStart()">
+
+</body>
+
 </html>
